descriptive text that emphasizes or further describes significant
changes made.  See document footer for additional details.

----------------------------------------------------------------------
--- 201X-XX-XX  Release 7.28.0                                     ---
----------------------------------------------------------------------

* removed precision limitation in NIRT input parsing - Cliff Yapp
* added new example geometry models: chess and die pieces - Jeff Sieu
* fixed graphical mode initial page loading in brlman - Cliff Yapp
* added 'bot_dump' command to MGED - Nick Reed
* ported MGED 'screengrab' command to Windows - Nick Reed
* removed spectral tracing: libmultispectral & rttherm - Cliff Yapp


----------------------------------------------------------------------
--- 2017-09-22  Release 7.26.4                                     ---
----------------------------------------------------------------------

This is a patch release, primary focused on updates to the build
system logic.

* upgraded libgdiam to version 1.0.3 - Cliff Yapp
* fixed MGED bindings behavior for c, A, P, and S chars - Bob Parker
* fixed gdiff usage statement - Sean Morrison
* removed anim.txt, sun.txt, tube.txt and movie.txt - Cliff Yapp


----------------------------------------------------------------------
--- 2017-06-10  Release 7.26.2                                     ---
----------------------------------------------------------------------

Among a variety of bugs fixed, the patch corrects a critical error in
BoT triangle mesh ray tracing.  For improved performance, it also
changes the default frame buffer display behavior to fully buffer ray
tracing images instead of displaying them incrementally.  A variety of
MGED commands see improvements too with 'ls' now supporting listing
objects by their on-disk size and the 'simulate' command applying
forces on objects (e.g., gravity) with greater ease.  Not yet
complete, there is a new interface being developed for resolving